fix: page break in media print

--- a/src/styles/_print.scss
+++ b/src/styles/_print.scss
@@ -1,4 +1,9 @@
 @media print {
+  div.tile,
+  ul {
+    page-break-inside: avoid;
+  }
+
   .no-print {
     display: none;
   }
